+ database is on! Chyba możemy się ucieszyć. ~ Żeberski Szymon + simple adding + simple showing what's inside + simple sample

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">I Plan(t)</string>
+    <string name="hint_plant">Plant…</string>
+    <string name="button_save">Save</string>
+    <string name="empty_not_saved">Plant in not saved because it is empty.</string>
+    <string name="add_plant">Add plant</string>
+
 </resources>
