--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">I Plan(t)</string>
-    <string name="hint_plant">Plant…</string>
+    <string name="hint_plant">"Plant's nickname"</string>
     <string name="button_save">Save</string>
     <string name="empty_not_saved">Plant in not saved because it is empty.</string>
     <string name="add_plant">Add plant</string>
+    <string name="new_plant">New plant</string>
 
 </resources>
