--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="empty_not_saved">Plant in not saved because it is empty.</string>
     <string name="add_plant">Add plant</string>
     <string name="new_plant">New plant</string>
-
+    <string name="reminder_channel">reminderChannel</string>
 </resources>
