--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="view_plants_history">View plant\'s history</string>
     <string name="died_on">Died on %s</string>
     <string name="last_watered">Last watered:\n%s</string>
+    <string name="last_fertilized">Last fertilized:\n%s</string>
 </resources>
