--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="died_on">Died on %s</string>
     <string name="last_watered">Last watered:\n%s</string>
     <string name="last_fertilized">Last fertilized:\n%s</string>
+    <string name="hide_dead_plants">Hide dead plants</string>
 </resources>
