--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
 
     <string name="reminder_channel">reminderChannel</string>
     <string name="view_plants_history">View plant\'s history</string>
+    <string name="view_plants_life">View plant\'s life</string>
     <string name="died_on">Died on %s</string>
     <string name="last_watered">Last watered:\n%s</string>
     <string name="last_fertilized">Last fertilized:\n%s</string>
