--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,6 @@
     <string name="export">Export...</string>
     <string name="share_on_twitter">Share on Twitter</string>
     <string name="click_a_photo_to_preview">Click a photo to preview</string>
+    <string name="channel_name">plant_watering</string>
+    <string name="channel_description">podlej mnie</string>
 </resources>
